manifest/devops-demo-serivce-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-serivce-lb
  namespace: perceptolab    
spec:
  type: LoadBalancer
  selector:
    app: devops-demo-app
  ports:
    - name: tcp8080
      protocol: TCP
      port: 8080
      targetPort: 8080
