manifest/devops-demo-serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-serivce
  namespace: perceptolab
spec:
  ports:
    - name: tcp8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: devops-demo-app
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
