manifest/devops-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-ingress
  namespace: perceptolab  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /perceptolab
        pathType: Prefix
        backend:
          service:
            name: devops-demo-serivce
            port:
              number: 8080
