manifest/devops-demo-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devops-test-network-policy
  namespace: perceptolab
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: devops-test-app
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - {}{
  "apiVersion" = "networking.k8s.io/v1"
  "kind" = "NetworkPolicy"
  "metadata" = {
    "name" = "devops-test-network-policy"
    "namespace" = "perceptolab"
  }
  "spec" = {
    "egress" = [
      {},
    ]
    "ingress" = [
      {
        "from" = [
          {
            "podSelector" = {
              "matchLabels" = {
                "app" = "devops-test-app"
              }
            }
          },
        ]
        "ports" = [
          {
            "port" = 5432
            "protocol" = "TCP"
          },
        ]
      },
    ]
    "podSelector" = {
      "matchLabels" = {
        "app.kubernetes.io/name" = "postgresql"
      }
    }
    "policyTypes" = [
      "Ingress",
      "Egress",
    ]
  }
}
